2011-07-20 Till Straumann <Till.Straumann@TU-Berlin.de>
	
	* if_em/Makefile.am, if_em/e1000_osdep.h, if_em/e1000_osdep.c,
	if_em/if_em.c: added e1000_osdep.c which implements all
	os-dependent parts in a bsdnet-agnostic fashion. Hence, the
	low-level driver can be used w/o bsdnet.
	FIXES: dependency on bsdnet initialization; PCI bus header
	was not initialized when not used via bsdnet (lanIpBasic driver
	crashed).

2010-07-23 Till Straumann <Till.Straumann@TU-Berlin.de>

	* libbsdport/devicet.c: Initialize libbspExt.

2010-06-30  Till Straumann <Till.Straumann@TU-Berlin.de>

	* libbsdport/bus.h: PPC's inlines from libcpu/io.h still have
	un-intuitive argument types (e.g., unsigned instead of uint32_t).
	Added additional 'iotype' arg to BUS_SPACE_DECL macro (ppc only)
	so that we can cast to the correct type as expected by libcpu/io.h.
	Hopefully that doesn't bring us into C99 alias hell.

	* libbsdport/devicet.c: Silence compiler warnings by casting (char)
	argument passed to 'ctype.h' functions [toupper + friends] ->
	(unsigned char) as these functions expect 'int'.
	
2010-03-07  Till Straumann <Till.Straumann@TU-Berlin.de>

	* links.am: POSIXified sed commands for sake of portability.

2010-02-12  Till Straumann <Till.Straumann@TU-Berlin.de>

	* libbsdport/Makefile.am: Removed obsolete (and commented)
	stuff.

2009-10-20  Till Straumann <Till.Straumann@TU-Berlin.de>

	* libbsdport/libbsdport.h, if_em/e1000_osdep.h:
	We need __BSD_VISIBLE defined. Some things in the rtems headers
	changed with 4.10 (can't pinpoint the details). We now
	#define __INSIDE_RTEMS_BSD_TCPIP_STACK__ before explicitly
	including <rtems/rtems_bsdnet.h> and this seemed to fix
	things for 4.10.

2009-10-20  Till Straumann <Till.Straumann@TU-Berlin.de>

	* libbsdport/libbsdport_post.h: added missing declaration
	of m_defrag() (Chris replaced the dummy #define a while
	ago and provided an implementation instead [thanks!] but
	we also need a declaration).
